--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,10 +7,18 @@
 }
 
 html {
-  // THis defines what 1rem is
+  // This defines what 1rem is
   font-size: 62.5%;
 }
 
 body {
+  font-family: "Montserrat", sans-serif;
   box-sizing: border-box;
+  width: 100%;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
 }
