--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,6 @@
+@import "./abstracts/mixin";
 @import "./base/base";
 @import "./base/variables";
 @import "./pages/home";
 @import "./layout/navigation";
+@import "./componets/buttons";
