--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./abstracts/mixin";
 @import "./base/base";
+@import "./base/utilities";
 @import "./base/variables";
 @import "./pages/home";
 @import "./layout/navigation";
