--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -8,28 +8,23 @@
   background-repeat: no-repeat;
 
   &__text-box {
-    // position: absolute;
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
-    @include contentCenter;
     text-align: center;
+    @include contentCenter;
     .heading {
-      text-transform: uppercase;
       backface-visibility: hidden;
       line-height: 2;
-      margin-bottom: 3rem;
+      //margin-bottom: 3rem;
       &--main {
         display: block;
-        font-size: 5rem;
-        font-weight: 400;
         letter-spacing: 1rem;
         color: $color-primary;
+        @include sectionHeading;
       }
       &--sub {
         display: block;
         font-size: 2rem;
         font-weight: 700;
+        text-transform: uppercase;
         letter-spacing: 0.5rem;
         color: $color-secondary;
       }
@@ -44,19 +39,15 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 50%;
     width: 100%;
+    height: 50%;
     background-color: $color-secondary;
     z-index: -10;
   }
   &__heading {
-    font-size: 6rem;
-    font-weight: 700;
     margin-top: -6rem;
-    margin-bottom: 6rem;
-    text-transform: uppercase;
-    font-weight: 400;
     color: $color-tertiary;
+    @include sectionHeading;
   }
   &__boxs {
     display: flex;
@@ -66,16 +57,14 @@
     padding: 4rem 2rem;
     background-color: $color-tertiary;
     border-radius: 1rem;
-    box-shadow: 0 2rem 4rem 0 rgba(0, 0, 0, 0.8);
+    box-shadow: 0 2rem 4rem 0 rgba($color-black, 0.8);
     &:not(:last-child) {
       margin-bottom: 4rem;
     }
     i {
-      margin-bottom: 2rem;
       color: $color-primary;
     }
     &__heading {
-      margin-bottom: 2rem;
       font-size: 3rem;
       font-weight: 400;
       color: $color-secondary;
@@ -96,12 +85,8 @@
     transform: skewY(7deg);
   }
   &__heading {
-    font-size: 6rem;
-    font-weight: 700;
-    margin-bottom: 6rem;
-    text-transform: uppercase;
-    font-weight: 400;
     color: $color-primary;
+    @include sectionHeading;
   }
   &__boxs {
     display: flex;
@@ -110,7 +95,7 @@
   .box-team {
     background-color: $color-secondary;
     padding: 1rem 0;
-    box-shadow: 0 2rem 4rem 0 rgba(0, 0, 0, 0.7);
+    box-shadow: 0 2rem 4rem 0 rgba($color-black, 0.7);
     &:not(:last-child) {
       margin-bottom: 4rem;
     }
@@ -145,17 +130,17 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   .carousel {
+    position: relative;
     width: 100%;
     margin: 0 auto;
     display: flex;
     overflow: hidden;
-    position: relative;
     &__btn {
       position: absolute;
       top: 50%;
       z-index: 10;
       font-size: 4rem;
-      color: white;
+      color: $color-white;
       cursor: pointer;
       &-left {
         left: 0;
@@ -187,7 +172,6 @@
       background-position: center;
       background-repeat: no-repeat;
       border-radius: 50%;
-      margin-bottom: 2rem;
       &--1 {
         background-image: url("../img/team1.jpg");
       }
@@ -200,12 +184,11 @@
     }
     &__heading {
       font-size: 3rem;
-      margin-bottom: 2rem;
       color: $color-tertiary;
     }
     &__text {
       font-size: 2rem;
-      color: black;
+      color: $color-black;
     }
   }
 }
@@ -213,21 +196,17 @@
   padding: 10rem 0;
   background-color: $color-primary;
   &__heading {
-    font-size: 6rem;
-    font-weight: 700;
-    margin-bottom: 6rem;
-    text-transform: uppercase;
-    font-weight: 400;
     color: $color-tertiary;
+    @include sectionHeading;
   }
   &__boxs {
     display: flex;
     flex-direction: column;
   }
   .box-pricing {
-    background-color: $color-tertiary;
+    background-color: darken($color-white, 10);
     border-radius: 1rem;
-    box-shadow: 0 2rem 4rem 0 rgba(0, 0, 0, 0.6);
+    box-shadow: 0 2rem 4rem 0 rgba($color-black, 0.6);
     text-align: center;
     overflow: hidden;
     &:not(:last-child) {
