--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,9 @@
 @import "./abstracts/mixin";
+@import "./base/animations";
 @import "./base/base";
 @import "./base/utilities";
 @import "./base/variables";
 @import "./pages/home";
+@import "./layout/header";
 @import "./layout/navigation";
 @import "./componets/buttons";
