--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,37 +1,3 @@
-.header {
-  width: 100%;
-  height: 100vh;
-  background-image: url("../img/header.jpg");
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-
-  &__text-box {
-    text-align: center;
-    @include contentCenter;
-    .heading {
-      backface-visibility: hidden;
-      line-height: 2;
-      //margin-bottom: 3rem;
-      &--main {
-        display: block;
-        letter-spacing: 1rem;
-        color: $color-primary;
-        @include sectionHeading;
-      }
-      &--sub {
-        display: block;
-        font-size: 2rem;
-        font-weight: 700;
-        text-transform: uppercase;
-        letter-spacing: 0.5rem;
-        color: $color-secondary;
-      }
-    }
-  }
-}
-
 .section-services {
   position: relative;
   padding: 15rem 0;
@@ -58,6 +24,10 @@
     background-color: $color-tertiary;
     border-radius: 1rem;
     box-shadow: 0 2rem 4rem 0 rgba($color-black, 0.8);
+    transition: all 0.4s ease-in;
+    &:hover {
+      transform: translateY(-2rem);
+    }
     &:not(:last-child) {
       margin-bottom: 4rem;
     }
@@ -96,6 +66,7 @@
     background-color: $color-secondary;
     padding: 1rem 0;
     box-shadow: 0 2rem 4rem 0 rgba($color-black, 0.7);
+    text-align: center;
     &:not(:last-child) {
       margin-bottom: 4rem;
     }
@@ -209,6 +180,11 @@
     box-shadow: 0 2rem 4rem 0 rgba($color-black, 0.6);
     text-align: center;
     overflow: hidden;
+    transition: all 0.4s ease-in;
+
+    &:hover {
+      transform: translateY(-2rem);
+    }
     &:not(:last-child) {
       margin-bottom: 4rem;
     }
@@ -238,6 +214,51 @@
     }
   }
 }
+
+.section-contact {
+  padding: 5rem 0;
+  background-color: darken($color-white, 10);
+
+  &__heading {
+    color: $color-secondary;
+    @include sectionHeading;
+  }
+  .contact-box {
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+    box-shadow: 0 2rem 4rem 0 rgba($color-black, 0.6);
+    &__form {
+      flex: 1;
+      border: 1px solid black;
+    }
+    &__info {
+      flex: 1;
+      border: 1px solid black;
+    }
+  }
+
+  .form {
+    &__container {
+      display: flex;
+      flex-wrap: wrap;
+      text-align: center;
+      align-items: center;
+      justify-content: space-between;
+      padding: 2rem;
+    }
+    &__input {
+      display: inline-block;
+      width: 100%;
+      padding: 1rem 2rem 1rem 0.5rem;
+      font-size: 1.4rem;
+      &-1 {
+        width: 48%;
+      }
+    }
+  }
+}
+
 @media (min-width: 786px) {
   .section-services {
     &__boxs {
@@ -291,6 +312,10 @@
       }
     }
   }
+
+  // .contact-box {
+  //   flex-direction: column;
+  // }
 }
 
 @media (min-width: 1000px) {
