--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -7,3 +7,21 @@
 .mr-btm-big {
   margin-bottom: 6rem;
 }
+.mr-small {
+  margin: 2rem;
+}
+.mr-medium {
+  margin: 4rem;
+}
+.mr-big {
+  margin: 6rem;
+}
+.color-sec {
+  color: $color-secondary;
+}
+.row {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: space-around;
+}
