--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,11 @@
+.logo {
+  &__link {
+    color: $color-primary;
+    font-size: 3rem;
+    text-decoration: none;
+  }
+}
+
 .section-services {
   position: relative;
   padding: 15rem 0;
@@ -223,43 +231,74 @@
     color: $color-secondary;
     @include sectionHeading;
   }
-  .contact-box {
+  .contact {
     display: flex;
-    width: 80%;
-    margin: 0 auto;
     box-shadow: 0 2rem 4rem 0 rgba($color-black, 0.6);
-    &__form {
+    border-radius: 2rem;
+    flex-direction: column;
+    background-image: linear-gradient(
+      165deg,
+      transparent 50%,
+      $color-tertiary 50%,
+      $color-tertiary 100%
+    );
+    &__box {
+      padding: 2rem 3rem;
       flex: 1;
-      border: 1px solid black;
-    }
-    &__info {
-      flex: 1;
-      border: 1px solid black;
+      &-heading {
+        margin: 4rem 0;
+        font-size: 4rem;
+        color: $color-primary;
+      }
+      &-list {
+        padding: 0 2rem;
+      }
+      &-tuple {
+        margin: 3rem 0;
+        display: flex;
+        align-items: center;
+      }
+      &-icon {
+        color: $color-primary;
+        background-color: $color-secondary;
+        min-width: 5rem;
+        min-height: 5rem;
+        margin-right: 1rem;
+        border-radius: 1rem;
+        position: relative;
+        & i {
+          @include contentCenter;
+        }
+      }
+      &-text {
+        text-align: left;
+        font-size: 1.7rem;
+
+        & > a {
+          color: black;
+          text-decoration: none;
+        }
+      }
     }
   }
-
   .form {
-    &__container {
-      display: flex;
-      flex-wrap: wrap;
-      text-align: center;
-      align-items: center;
-      justify-content: space-between;
-      padding: 2rem;
-    }
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2rem;
+
     &__input {
       display: inline-block;
       width: 100%;
       padding: 1rem 2rem 1rem 0.5rem;
       font-size: 1.4rem;
       &-1 {
-        width: 48%;
+        width: 100%;
       }
     }
   }
 }
 
-@media (min-width: 786px) {
+@media (min-width: 900px) {
   .section-services {
     &__boxs {
       flex-direction: row;
@@ -312,10 +351,36 @@
       }
     }
   }
+}
 
-  // .contact-box {
-  //   flex-direction: column;
-  // }
+@media (min-width: 900px) {
+  .section-contact {
+    .contact {
+      flex-direction: row;
+      width: 80%;
+      margin: 0 auto;
+      background-image: linear-gradient(
+        105deg,
+        transparent 50%,
+        $color-tertiary 50%,
+        $color-tertiary 100%
+      );
+    }
+    .form {
+      display: flex;
+      flex-wrap: wrap;
+      text-align: center;
+      align-items: center;
+      justify-content: space-between;
+      padding: 2rem;
+
+      &__input {
+        &-1 {
+          width: 45%;
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: 1000px) {
